--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ httpx==0.28.1
 idna==3.10
 jiter==0.10.0
 openai==1.99.4
-pydantic==2.11.7
+pydantic==2.12.0a1
 pydantic_core==2.38.0
 python-dotenv==1.1.1
 python-telegram-bot==22.3
